Edited form padding and added fixed spaces

--- a/css/screen.css
+++ b/css/screen.css
@@ -216,11 +216,13 @@ p {
   color: #003049;
 }
 form {
+  padding: 1em;
   background-color: #669BBC;
+  border-radius: 0.5em;
 }
 input {
- background-color: #C1121F;
- color: #780000;
+  background-color: #C1121F;
+  color: #780000;
 }
 label {
   color: #003049;
