--- a/css/screen.css
+++ b/css/screen.css
@@ -220,13 +220,15 @@ p {
   font-size: 1em;
 }
 form {
-  margin: 2em;
+  margin: 1.667em;
   padding: 1em;
   background-color: #669BBC;
-  border-radius: 4em;
+  border-radius: 1.667em;
 }
 input {
-  background-color: grey;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  background-color: lightgray;
   color: darkgray;
   border: 0;
 }
@@ -234,8 +236,12 @@ label {
   color: #003049;
   font-style: italic;
 }
+input:focus {
+  /* removes focus border*/
+  outline: none;
+  border: none;
+}
 
-/*design form */
 
 
 /* ===== STATE STYLES ======= */
